# Discord-Bot-Basis-rs

./: .env.template  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker.yml
Logs/: bot.log.2026-03-13
locales/: de.json  en.json  fr.json
migrations/: 0001_init.sql  0002_log_channel.sql
src/: cache.rs  ctx_ext.rs  db.rs  health.rs  i18n.rs  logging.rs  main.rs  metrics.rs  permissions.rs
src/commands/: admin.rs  help.rs  info.rs  mod.rs  ping.rs  serverinfo.rs  setup.rs  support.rs  userinfo.rs
src/tasks/: cronjobs.rs  mod.rs
